[gd_scene load_steps=3 format=3 uid="uid://40sj8gb6n4xo"]

[ext_resource type="PackedScene" uid="uid://dj454sewaulhq" path="res://Card.tscn" id="1_gfoq1"]
[ext_resource type="Script" path="res://main.gd" id="1_j3id2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j3id2")

[node name="Card1" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(100, 490)

[node name="Card2" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(300, 490)

[node name="Card3" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(500, 490)

[node name="Card4" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(700, 490)

[node name="Card5" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(100, 110)

[node name="Card6" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(300, 110)

[node name="Card7" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(500, 110)

[node name="Card8" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(700, 110)

[node name="Card9" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(300, 300)

[node name="Card10" parent="." instance=ExtResource("1_gfoq1")]
position = Vector2(500, 300)
